packages/core/test/baseman/invalid-usage/case-multi-params-1/commands/default.ts
import {
  Executable,
  Param,
  Params
} from '../../../../..';

export default class extends Executable {
  execute(
    @Param({
      description: 'Some name',
      required: true,
    })
    name: string,

    @Params({
      type: String,
    })
    texts: string[],

    @Params({
      type: String,
    })
    extraTexts: string[],
  ) { }
}
